tests/ui/invalid-compile-flags/print-file-names-request-malformed-crate-name-2.stderr
error[E0539]: expected a quoted string literal
  --> $DIR/print-file-names-request-malformed-crate-name-2.rs:6:1
   |
LL | #![crate_name = concat!("this_one_is_not")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
